<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="city">City</string>
    <string name="information_type">Information Type</string>    
    <string name="get_weather_forecast">Get Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <string-array name="information_types">
	    <item>temperature</item>
	    <item>wind_speed</item>
	    <item>condition</item>
	    <item>pressure</item>
	    <item>humidity</item>
	    <item>all</item>
  </string-array>
	    <string name="nr1">nr1</string>
	    <string name="nr2">nr2</string>
	    <string name="plus">add</string>
	    <string name="send">send</string>
	    <string name="star">mul</string>

</resources>
