<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".PracticalTest02MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
	        <EditText
	            android:id="@+id/server_port_edit_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/server_port" />
        
        </ScrollView>
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
	        <Button
	            android:id="@+id/connect_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/connect" />
        
        </ScrollView>
        
    </LinearLayout>
    
    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
        </ScrollView>
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
        </ScrollView>
        
    </LinearLayout>    
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">
        
        <EditText
            android:id="@+id/idnr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:ems="5"
            android:hint="@string/nr1" />

        <EditText
            android:id="@+id/idnr2"
            android:layout_width="156dp"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/nr2" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/plus" />

        <Button
            android:id="@+id/get_weather_forecast_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/send" />

        <Button
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:text="@string/star" />
        
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="144dp" >
    
	    <TextView
	        android:id="@+id/result_text_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="false"
	        android:maxLines="10" />
    
    </ScrollView>

</LinearLayout>